--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Cargo.lock
 
 # Don't want ot actually commit deposit cost basis files
 /deposits/deposits.csv
+
+# Don't check in output reports
+/output/*.csv
